# ia-trabalhos

./: .gitignore
trabalho1/: README.md  pyproject.toml  requirements.txt
trabalho1/data/input/: maze-9.txt  maze.txt  test-maze.txt
trabalho1/src/: best_first_search.py  heuristics.py  main.py  maze_generator.py  maze_problem.py  maze_representation.py  measure_time_memory.py  node.py  problem.py  visualize_matrix.py
trabalho1/src/comparisons/: informed_plots.py  uninformed_plots.py
trabalho1/src/core/: __init__.py  heuristics.py  maze_generator.py  maze_problem.py  maze_representation.py  node.py  problem.py
trabalho1/src/informed/: __init__.py  a_star_search.py  generate_gifs_informed.py  greedy_best_first_search.py  informed_comparison.py
trabalho1/src/informed_search/: generate_gifs_informed.py  greedy_best_first_search.py
trabalho1/src/search/: __init__.py  best_first_search.py  measure_time_memory.py  visualize_matrix.py
trabalho1/src/tools/: __init__.py  main.py  run_gui.py
trabalho1/src/uninformed/: __init__.py  best_first_search.py  bidirectional_best_first_search.py  dijkstra.py  generate_gifs_uninformed.py  uninformed_comparison.py
trabalho1/src/uninformed_search/: bidirectional_best_first_search.py  dijkstra.py  djikstra.py  generate_gifs_uninformed.py  uninformed_comparison.py
trabalho2/: README.md  pyproject.toml  requirements.txt
trabalho2/src/comparisons/: compare_hill_climbing.py  hill_climbing_plots.py
trabalho2/src/core/: eight_queens_representation.py
trabalho2/src/greedy_local_search/: hill_climbing.py  random_restarts.py  (+2 more)
(+11 files in other folders)
