[tool.poetry]
name = "maze-search-comparison"
version = "0.1.0"
description = ""
authors = ["alvarengazv <gui.alvarengas234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26"
matplotlib = "^3.8"
memory-profiler = "^0.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
